fix black blocks by disable dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,9 @@
   line-height: 24px;
   font-weight: 450;
 
-  color-scheme: light dark;
+  color-scheme: normal;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -67,7 +67,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 2560px;
   margin: 0 auto;
   padding: 2rem;
   text-align: left;
